# RAGU

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  restore-db.sh
config/: icl_generation.yaml
data/: 10 Статья по ХВ МФ-2025-14.md  11 KorzhakovAA 811.md  13 Приложение. Статья.md  14 Влияние на здание сейсмического действия взрывов и других факторов (ИТОГ_2).md  16 Статья для рецензирования Ахтямов К.Д., Фазылов И.Р..md  18 Статья потенциал удароропасности.md  19 Статья по хлорированию - ГОТОВО.md  2 Lukanina.md  21 Статья фидер корр.md  23 О_ВЛИЯНИИ_ОДНОРОДНОСТИ_ПОРОД_НА_УДАРООПАСНОСТЬ_МЕСТОРОЖДЕНИЙ.md  24 Статья.md  25 Статья - Бикетова Л.В. (ЛГМ).md  26 Статья - Великая Т.И. (ИАЦ).md  27 Статья - Владимиров Е.С. (ЛПМ).md  28 Статья - Клименко И.В. (ЛГМ).md  29 Статья - Косов Я.И. (ЛГМ).md  30 Статья - Лисаков Ю.Н. (ЛГМ).md  31 Статья - Савинова Ю.А. (ЛПМ).md  32 Статья - Салтыков П.М. (ЛГМ).md  33 Статья - Хашковская Т.Н..md  36 Статья_Готовая..md  37 Статья шахта Ангидрит рудника Кайерканский (1).md  38 Статья ЦМ_В АО Кольская ГМК получены первые слитки аффинированных металлов.md  39 ИССЛЕДОВАНИЕ ПЕРСПЕКТИВНЫХ СОСТАВОВ ДЛЯ ОТЛИВКИ МЕДНЫХ АНОДОВ.md  39 Статья_Применение сульфита натрия для осаждения Au из Pt-Pd растворов сложного состава.md  4 Doping NCM pCAM article.md  40 Анализ аффинированных СЕРЕБРА и ПЛАТИНЫ. ЦВЕТНЫЕ МЕТАЛЛЫ rev 22-05-23.md  41 Оценка физико-механических свойств горных пород при применении противоуд....md  43 Повышение селективности концентратов МПГ в химико-металлургическом цехе КГМК.md  44 ИССЛЕДОВАНИЕ ПРОЦЕССА ГРАНУЛЯЦИИ МЕДНО-НИКЕЛЕВЫХ ШТЕЙНОВ.md  45 Статья. Магнитная сепарация. Часть 1.md  46 Статья. Магнитная сепарация. Часть 2.md  47 Трубчатые печи статья 1.2.md  48 Поведение силикатной составляющей при переработке Ni к-та -в редакцию Цв.металлы.md  49 Моделирование разгрузки.md  5 Статья для ГЖ №1.md  50 Статья адаптация геометрии.md  52 Solid household and industrial waste paper 28-09-2021-rus.md  54 Поведение селена и теллура при электроэкстракции меди.md  55 Приложение. Текст статьи.md  (+7 more)
etl/: extract_and_index.py  local_embedder.py  rotating_llm.py
examples/: README.md  extract_with_llm_and_local_search.py  local_embedder_with_short_context.py
ragu/: README.md  __init__.py
scripts/: __init__.py  generate_icl_examples.py  parse_silver_age_writers.py
server/: entrypoint.sh  main.py
tests/: README.md
задание/: README.md  (+3 more)
(+127 files in other folders)
