[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_ragu"
version = "0.0.2"
description = "GraphRAG system"
requires-python = ">=3.10"
dependencies = [
    "aiolimiter>=1.2.1",
    "loguru>=0.7.3",
    "nano-vectordb>=0.0.4.3",
    "networkx>=3.4.2",
    "nltk>=3.9.2",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "razdel>=0.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "diskcache>=5.6.3",
    "jinja2>=3.1.6",
    "qdrant-client>=1.12.1",
    "fastembed==0.8.0",
    "pymorphy3>=2.0.6",
    "graspologic-native>=1.2.5",
    "scikit-learn>=1.7.2",
    "requests>=2.33.1",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=5.1.1",
    "transformers>=4.57.1",
    "smart-chunker>=0.0.5",
]

test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "httpx[socks]",
]

[tool.setuptools.packages.find]
include = ["ragu*"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
skip_empty = true
ignore_errors = true  # torch generates files in /tmp/ dir that crash `coverage report -m` command
